results/print-rdt/expected/failure/parser/empty_statement.psy.out
 var_type -> INT
 primary -> INT_CONSTANT
 call_access -> primary
 unary -> call_access
 factor -> unary
 term -> factor
 shift -> term
 comparison -> shift
 equality -> comparison
 bitwise_and -> equality
 bitwise_xor -> bitwise_and
 bitwise_or -> bitwise_xor
 logic_and -> bitwise_or
 logic_or -> logic_and
 ternary -> logic_or
 assignment -> ternary
 expression -> assignment
 varDecl -> VAR var_type IDENTIFIER EQ expression SEMI_COLON
 declaration -> varDecl
 decList -> declaration
 program -> decList
error: syntax error, unexpected ;, expecting end of file
  --> tests/failure/parser/empty_statement.psy:1:18
   |
  1| var int t1 = 10;;
   |                 ^--- Here

